sourceCompatibility = "1.8"
targetCompatibility = "1.8"

buildService {
	apiDir = "../screens-api/src/main/java"
}

dependencies {
	provided group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
	provided group: "com.liferay", name: "com.liferay.asset.publisher.web", version: "1.0.0"
	provided group: "com.liferay", name: "com.liferay.dynamic.data.lists.api", version: "2.0.0"
	provided group: "com.liferay", name: "com.liferay.dynamic.data.lists.service", version: "1.0.0"
	provided group: "com.liferay", name: "com.liferay.dynamic.data.mapping.api", version: "3.0.0"
	provided group: "com.liferay", name: "com.liferay.dynamic.data.mapping.service", version: "2.0.0"
	provided group: "com.liferay", name: "com.liferay.journal.service", version: "3.0.0"
	provided group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
	provided group: "com.liferay", name: "com.liferay.portal.upgrade", version: "2.0.0"
	provided group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
	provided group: "com.liferay.portal", name: "com.liferay.util.java", version: "2.0.0"
	provided group: "javax.portlet", name: "portlet-api", version: "2.0"
	provided group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
	provided project(":apps:screens:screens-api")
	provided project(":apps:web-experience:journal:journal-api")
}